--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-audio-comments",
-  "version": "1.0.0",
+  "version": "1.2.0",
   "description": "React audio comments",
   "main": "dist/index.min.js",
   "scripts": {
@@ -15,9 +15,6 @@
   ],
   "author": "Vlad Morzhanov",
   "license": "MIT",
-  "dependencies": {
-    "react": "^16.6.3"
-  },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.51",
     "@babel/plugin-proposal-class-properties": "^7.0.0",
@@ -40,6 +37,7 @@
     "eslint-plugin-react": "^7.11.1",
     "prettier": "^1.10.2",
     "prettier-eslint": "^8.8.2",
+    "react": "^16.6.3",
     "rollup": "^0.67.4",
     "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-uglify": "^6.0.0"
