--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-audio-comments",
-  "version": "1.5.0",
+  "version": "1.6.0",
   "description": "React audio comments",
   "main": "dist/index.min.js",
   "scripts": {
@@ -13,6 +13,10 @@
     "audio",
     "comments"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/morzhanov/react-audio-comments"
+  },
   "author": "Vlad Morzhanov",
   "license": "MIT",
   "devDependencies": {
